--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Cold Calling</string>
+    <string name="next_button">Next</string>
+    <string name="back_button">Back</string>
+
 </resources>
